--- a/Templates/library_detail.html
+++ b/Templates/library_detail.html
@@ -1,4 +1,4 @@
-<!-- library_detail.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +10,9 @@
     <h2>Books in Library:</h2>
     <ul>
         {% for book in library.books.all %}
-        <li>{{ book.title }} by {{ book.author.name }} (Published {{ book.publication_year }})</li>
+            <li>{{ book.title }} by {{ book.author.name }} (Published {{ book.publication_year }})</li>
+        {% empty %}
+            <li>No books found in this library.</li>
         {% endfor %}
     </ul>
 </body>
