--- a/Templates/list_books.html
+++ b/Templates/list_books.html
@@ -1,4 +1,4 @@
-<!-- list_books.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +9,9 @@
     <h1>Books Available:</h1>
     <ul>
         {% for book in books %}
-        <li>{{ book.title }} by {{ book.author.name }}</li>
+            <li>{{ book.title }} by {{ book.author.name }}</li>
+        {% empty %}
+            <li>No books found.</li>
         {% endfor %}
     </ul>
 </body>
