Tagging and Search added

--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -23,5 +23,12 @@
       <li>No posts yet.</li>
     {% endfor %}
   </ul>
+
+<form method="get" action="{% url 'post-list' %}">
+  <input type="text" name="q" placeholder="Search posts or tags..." value="{{ request.GET.q|default:'' }}">
+  <button type="submit">Search</button>
+</form>
+
+
 </body>
 </html>
